[package]
name = "libosinfo"
version = "0.1.1"
authors = [ "Alexey Volkov <qualimock@altlinux.org>" ]
edition = "2024"
description = "Rust bindings for libosinfo"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/qualimock/libosinfo-rs"
include = ["/src", "/README.md", "/LICENSE"]

[workspace]
members = ["sys"]
exclude = ["gir", "gir-files"]

[dependencies]
libc = "0.2"
bitflags = "2.2"
ffi = { package = "libosinfo-sys", path = "./sys", version = "0.1.0" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main", version = ">=0.21" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main", version = ">=0.21" }

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["v1_10"]
v1_3 = ["ffi/v1_3"]
v1_4 = ["v1_3", "ffi/v1_4"]
v1_5 = ["v1_4", "ffi/v1_5"]
v1_6 = ["v1_5", "ffi/v1_6"]
v1_7 = ["v1_6", "ffi/v1_7"]
v1_8 = ["v1_7", "ffi/v1_8"]
v1_10 = ["v1_8", "ffi/v1_10"]
