[package]
name = "libosinfo-sys"
version = "0.1.1"
authors = [ "Alexey Volkov <qualimock@altlinux.org>" ]
edition = "2021"
description = "Rust bindings for libosinfo"
license = "GPL-3.0-or-later"
repository = "https://github.com/qualimock/libosinfo-rs"
build = "build.rs"

[package.metadata.system-deps.libosinfo_1_0]
name = "libosinfo-1.0"
version = "1"

[package.metadata.system-deps.libosinfo_1_0.v1_3]
version = "1.3"

[package.metadata.system-deps.libosinfo_1_0.v1_4]
version = "1.4"

[package.metadata.system-deps.libosinfo_1_0.v1_5]
version = "1.5"

[package.metadata.system-deps.libosinfo_1_0.v1_6]
version = "1.6"

[package.metadata.system-deps.libosinfo_1_0.v1_7]
version = "1.7"

[package.metadata.system-deps.libosinfo_1_0.v1_8]
version = "1.8"

[package.metadata.system-deps.libosinfo_1_0.v1_10]
version = "1.10"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "libosinfo_sys"

[features]
v1_3 = []
v1_4 = ["v1_3"]
v1_5 = ["v1_4"]
v1_6 = ["v1_5"]
v1_7 = ["v1_6"]
v1_8 = ["v1_7"]
v1_10 = ["v1_8"]

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = ">=0.21"
branch = "main"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = ">=0.21"
branch = "main"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = ">=0.21"
branch = "main"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
